<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/action_search">
    </item>

    <item
        android:id="@+id/menu_group"
        android:icon="@mipmap/ic_menu_group"
        android:title="@string/menu_group">
    </item>
    <item
        android:id="@+id/menu_add"
        android:icon="@mipmap/ic_menu_add"
        android:title="@string/menu_add">
    </item>
    <item
    android:id="@+id/menu_scan"
    android:icon="@mipmap/ic_menu_scan"
    android:title="@string/menu_scan">
</item>
    <item
        android:id="@+id/menu_feedback"
        android:icon="@mipmap/ic_menu_feedback"
        android:title="@string/menu_feedback">
    </item>
</menu>